gap fixed

--- a/src/pages/SurvayForm.scss
+++ b/src/pages/SurvayForm.scss
@@ -15,7 +15,7 @@ body {
 
 .form-group {
   display: flex;
-  // gap: 0.7rem;
+  gap: 0.7rem;
   margin-top: -1rem;
   margin-bottom: -1rem;
 
